Text editor's "Tabs as Spaces" not respecting selected tab size (also, a text editor line height issue). #33180

Closed
opened 2012-11-15 04:04:20 +01:00 by Cole Reed · 9 comments

%%%The text editor when "Tabs as Spaces" is switch on the tab size is always 4 spaces regardless of the tab width setting.

  1. Open the text editor, and open the text editor properties window.
  2. Turn on "Tabs as Spaces"
  3. Adjust the "Tab Width" Settings
  4. Put your cursor in the text window and hit tab a few times, you will see that it always adds 4 spaces no matter what the tab width setting.

Second thing is that the line spacing in the text editor is very small (not referring to the font size, just the size between lines). You can see by the screen shot that characters actually touch in some cases, and I haven't been able to find a way to change this anywhere. I realize this is not really a bug, but I'm not sure what the proper channel is to report something like this. Is anyone in charge of general ui issues / roadmap kind of stuff?

System:
2010 Macbook Pro
OSX Mountain Lion
I have tested for the above in the official release - r51232, as well as from my own build of source at r51882%%%

%%%The text editor when "Tabs as Spaces" is switch on the tab size is always 4 spaces regardless of the tab width setting. 1. Open the text editor, and open the text editor properties window. 2. Turn on "Tabs as Spaces" 3. Adjust the "Tab Width" Settings 4. Put your cursor in the text window and hit tab a few times, you will see that it always adds 4 spaces no matter what the tab width setting. Second thing is that the line spacing in the text editor is very small (not referring to the font size, just the size between lines). You can see by the screen shot that characters actually touch in some cases, and I haven't been able to find a way to change this anywhere. I realize this is not really a bug, but I'm not sure what the proper channel is to report something like this. Is anyone in charge of general ui issues / roadmap kind of stuff? System: 2010 Macbook Pro OSX Mountain Lion I have tested for the above in the official release - r51232, as well as from my own build of source at r51882%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%First issue is caused by internal design where tab width is just a display option, not text's property. This is already in our TODO list http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo/Editors#Text_Editor

Line spacing actually depends on font size, but probably there's some bug there or so. Perhaps not so difficult to improve this thing.%%%

%%%First issue is caused by internal design where tab width is just a display option, not text's property. This is already in our TODO list http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo/Editors#Text_Editor Line spacing actually depends on font size, but probably there's some bug there or so. Perhaps not so difficult to improve this thing.%%%
Member

%%%The text display topic is nice for our new maintainer Justin :)%%%

%%%The text display topic is nice for our new maintainer Justin :)%%%
Member

%%%There is actually a patch in the patch tracker (http://projects.blender.org/tracker/index.php?func=detail&aid=32927&group_id=9&atid=127) that hopefully will help with the tab width. :)

Line height issue fixed.
Committed r52264%%%

%%%There is actually a patch in the patch tracker (http://projects.blender.org/tracker/index.php?func=detail&aid=32927&group_id=9&atid=127) that hopefully will help with the tab width. :) Line height issue fixed. Committed r52264%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%You guys are the best!%%%

%%%You guys are the best!%%%

%%%Justin, seems this commit introduced inconsistency to Y position of cursor and brackets highlight in cases word wrap is used. You can simply run Help -> System Info, open text block in text editor, enable word wrap and check cursor behavior at lines 13 and higher.%%%

%%%Justin, seems this commit introduced inconsistency to Y position of cursor and brackets highlight in cases word wrap is used. You can simply run Help -> System Info, open text block in text editor, enable word wrap and check cursor behavior at lines 13 and higher.%%%
Member

%%%Thanks for catching that Sergey. I will definitely look into this issue. (I would have sooner but the notification email about your post got sent to my spam mail.)
%%%

%%%Thanks for catching that Sergey. I will definitely look into this issue. (I would have sooner but the notification email about your post got sent to my spam mail.) %%%

%%%Justin, apparently i've fixed that already, so no worries :)%%%

%%%Justin, apparently i've fixed that already, so no worries :)%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33180
No description provided.