fix [#33180] text editor line height issue

Added small space between lines in the text editor.